# VRCH-Server

./: .gitignore  Cargo.toml  README.md  build.bat  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: on_tag_push  publish_on_release.yml
core/: Cargo.toml
core/src/: lib.rs  network.rs  state.rs  wrappers.rs
core/src/api/: mod.rs
core/src/bhaptics/game/: raw-response.json
core/src/bhaptics/game/network/: event_map.rs  mod.rs
core/src/bhaptics/game/v2/: mod.rs
core/src/bhaptics/game/v3/: mod.rs
core/src/devices/bhaptics/: mod.rs
core/src/devices/wifi/: mod.rs
core/src/devices/wifi/udp/: mod.rs
core/src/mapping/: event.rs
core/src/osc/: server.rs
core/src/osc/utils/: recieve.py  send.py
core/src/util/: deserialization.rs
core/src/vrc/: config.rs  mod.rs
example_configs/: Headset.json
example_configs/Average_Headset-8x_1/: Average_Headset-8x_1.json  Average_Headset-8x_1.prefab  Average_Headset-8x_1_QUEST.prefab
models/: standard.blend
scripts/: vrc.py
src/: App.tsx  bindings.ts  layout.tsx  main.tsx
src-core/: Cargo.toml
src-core/src/: file.rs  lib.rs  state.rs  wrappers.rs
src-core/src/api/: mod.rs
src-core/src/bhaptics/game/: mod.rs
src-core/src/bhaptics/game/network/: event_map.rs  mod.rs
src-core/src/bhaptics/game/v2/: mod.rs
src-core/src/bhaptics/maps/: mod.rs  x40_vest.rs  x6_head.rs
src-core/src/devices/: mod.rs  update.rs
src-core/src/devices/bhaptics/: mod.rs
src-core/src/devices/wifi/: mod.rs
src-core/src/mapping/: event.rs  haptic_node.rs  input_node.rs  mod.rs
src-core/src/util/: math.rs  mod.rs
src-core/src/vrc/: algo.py  cache_node.rs  config.rs  discovery.rs  mod.rs  parsing.rs
src-elevated-register/: .gitignore  Cargo.toml  build.rs
src-elevated-register/src/: main.rs
src-proxy/: Cargo.toml
src-proxy/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  output.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/map_configs/: Average_32xVest-3B_1.json  Average_32xVest-Rays_1.json  Average_Dense-Headset_1 - Copy.json  Average_Dense-Headset_1.json  Average_Ear-Pull-Levi_1.json  Average_Ear_Pull_1.json  Average_Headset-8x_1.json  Average_Headset-8x_2.json  Average_Tail-Pull_1.json  Average_nardo-generic-face_1.json  Average_nardo-generic-vest_1.json  Average_test-00_1.json
src-tauri/security/: README.md  bhaptics.pfx  cert.pem  key.pem  localhost.crt  localhost.key  selfsigned_cert.sh
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/api/: mod.rs
src-tauri/src/bhaptics/: auth.json  discovery.rs  mod.rs
src-tauri/src/bhaptics/devices/: mod.rs
src-tauri/src/bhaptics/devices/ble/: mod.rs  tactal.rs  x40.rs
src-tauri/src/bhaptics/game/: auth_message.rs  mod.rs  raw-response.json
src-tauri/src/bhaptics/game/device_maps/: mod.rs  x40_vest.rs
src-tauri/src/bhaptics/game/network/: debug.json  event_map.rs  mod.rs
src-tauri/src/bhaptics/game/v1/: mod.rs
src-tauri/src/bhaptics/game/v2/: mod.rs
src-tauri/src/bhaptics/game/v3/: auth_message.rs  mod.rs
src-tauri/src/bhaptics/maps/: mod.rs
src-tauri/src/ble/: mod.rs
src-tauri/src/devices/: device.rs  mod.rs  traits.rs  update.rs
src-tauri/src/devices/bhaptics/: ble.rs  mod.rs
src-tauri/src/devices/serial/: update.rs
src-tauri/src/devices/wifi/: config.rs  connection_manager.rs  discovery.rs  mod.rs  ota.rs  r_mod.rs
src-tauri/src/devices/wifi/udp/: broadcast.rs  mod.rs
src-tauri/src/haptic/: btle.rs  mdns.rs  mod.rs  recv.rs  traits.rs
src-tauri/src/haptic/ble/: mod.rs
src-tauri/src/haptic/wifi/: config.rs  connection_manager.rs  discovery.rs  mod.rs
src-tauri/src/mapping/: event.rs  global_map.rs  haptic_node.rs  input_node.rs  interp.rs  load_map.rs  mod.rs
src-tauri/src/osc/: mod.rs  server.rs
src-tauri/src/osc/utils/: recieve.py  send.py
src-tauri/src/udp/: broadcast.rs
src-tauri/src/util/: deserialization.rs  math.rs  mod.rs
src-tauri/src/vrc/: cache_node.rs  config.rs  discovery.rs  mod.rs  osc_query.rs  parsing.rs  reach.py
src-vrc-oscquery/listen-for-vrc/: NativeExports.cs  Program.cs  listen-for-vrc.csproj
src/assets/: standard.glb
src/context/: DevicesContext.tsx  SettingsProvider.tsx  TauriProvider.tsx  VrcContext.tsx  mapContext.tsx
src/routes/: common.tsx  connections.tsx  device_settings.tsx  haptic_map.tsx  home.tsx  settings.tsx
src/routes/connections/: connectedApp.tsx
src/routes/device_settings/: ota.tsx
src/routes/game_settings/: bhaptics.tsx  game_settings.tsx
src/routes/haptic_map/: NodeFilterOverlay.tsx  VrcConfigRadiusEditor.tsx  mod.tsx  standard.tsx
src/routes/home/: connectedDevices.tsx  gamesSettings.tsx  info.tsx
src/routes/home/gamesSettings/: CacheSummary.tsx  HapticNodes.tsx
src/routes/home/info/: display_haptic_nodes.tsx  groups.tsx  raw.tsx  set_offset.tsx  test_motors.tsx  upload_map.tsx
src/routes/settings/: fw-repository.tsx
src/utils/: address_builder.ts  commonClasses.ts  global_map.ts  vrc_info_classes.ts
testing/: config.json  vrch-headless.d
testing/testing/: testing.vtuneproj
