[package]
name = "haptic-core"
version = "0.0.9"
edition = "2021"

[features]
default = []
tauri-get = ["dep:tauri-plugin-http"]

[dependencies]
tauri-plugin-http = { version = "2", features = ["blocking"], optional = true}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

btleplug = {version = "0.11.8", features = ["serde"] }
tokio = {version = "1.42.1", features = ["rt-multi-thread", "full", "tracing"] }
rosc = { git = "https://github.com/virtuallyaverage/rosc-serde.git" }
regex = "1.11.1"
uuid = { version = "1.14", features = ["v4"] }
if-addrs = "0.13.3"
log = "0.4.27"
tokio-rustls = {version = "0.26", default-features = false, features = ["ring"] }
tokio-websockets = {version = "0.11.3", features = ["native-tls", "server", "sha1_smol"] }
futures-util = "0.3.31"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
reqwest = {version = "0.12.15", features = ["blocking", "json"] }
dashmap = {version = "6.1.0", features = ["serde"] }
tokio-util = "0.7.14"
walkdir = "2.5.0"
strum = {version = "0.27.1", features = ["strum_macros", "std", "derive"] }
base64 = "0.22.1"
once_cell = "1.21.3"
libloading = "0.8"
md5 = "0.8.0"
thiserror = "2.0.17"
parking_lot = { version = "0.12.5", features = ["serde"] }
directories = "6.0.0"
enum_dispatch = "0.3.13"
hazarc = { version = "0.1.0", features = ["serde"] }
arc-swap = { version = "1.8.1", features = ["serde"] }
boxcar = "0.2.14"
specta = { version = "2.0.0-rc.24", features = ["serde_json"] }
rayon = "1.11.0"
mdns-sd = "0.19.0"
warp = { version = "0.4.2", features = ["server"] }
urlencoding = "2.1.3"
