[package]
name = "vrch-gui"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vrch_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
windows = "0.61.1"

[dependencies]
# tauri requirements
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"

# project stuff
oyasumivr_oscquery = { git = "https://github.com/Raphiiko/oyasumivr_oscquery.git" }
tokio = {version = "1.42.1", features = ["rt-multi-thread"] }
rosc = { git = "https://github.com/virtuallyaverage/rosc-serde.git" }
regex = "1.11.1"
uuid = "1.14.0"
if-addrs = "0.13.3"
btleplug = "0.11.7"
dunce = "1.0.5"
log = "0.4.27"
runas = "1.2.0"
windows = "0.61.1"
tokio-rustls = "0.26.2"
tokio-websockets = {version = "0.11.3", features = ["native-tls", "server", "sha1_smol"] }
futures-util = "0.3.31"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
futures = "0.3.31"
reqwest = {version = "0.12.15", features = ["blocking", "json"] }
dashmap = {version = "6.1.0", features = ["serde"] }
