[package]
name = "vrch-gui"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vrch_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]

[dependencies]
console-subscriber = "0.5"

# tauri requirements
tauri = { version = "2", features = ["devtools"] }
tauri-specta = { version = "2.0.0-rc.24", features = ["typescript"] }
specta = { version = "2.0.0-rc.24", features = ["serde_json"] }
specta-typescript = "=0.0.11"
tauri-plugin-opener = "2"
serde_json = "1"
tauri-plugin-os = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.2.1"
tauri-plugin-http = { version = "2", features = ["blocking"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-serialplugin = "2.21.1"

# project stuff
haptic-core = { path = "../src-core"}
tokio = {version = "1.42.1", features = ["rt-multi-thread", "full", "tracing"] }
dunce = "1.0.5"
log = "0.4.27"
runas = "1.2.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
